--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,19 +4,16 @@ author: Steve Hamblett<steve.hamblett@linux.com>
 description: The database component of the Dartivity IOT suite of packages.
 homepage: https://github.com/shamblett/dartivity_database
 environment:
-  sdk: '>=2.0.0-dev <3.0.0'
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
 dependencies:
-  wilt: '>=4.0.0 <=5.0.0'
-  json_object_lite: '^2.0.0'
+  wilt: '^5.0.0'
+  json_object_lite: '^2.1.1'
   crypto: '>=2.0.1 <3.0.0'
 
 dev_dependencies:
-  test: '^1.3.0'
-  coverage: '^0.12.2'
-  #dart_dev: '^2.0.0-alpha'
-  dart_style: '^1.1.3'
-  dartdoc: '^0.20.3'
-  build_runner: '^0.10.0'
-  build_test: '^0.10.2'
-  build_web_compilers: '^0.4.0'
+  test: '^1.16.0-nullsafety.16'
+  pana: '^0.14.10'
+  build_runner: '^1.10.3'
+  build_test: '^1.3.4'
+  build_web_compilers: '^2.16.0'
 
